--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.maven.shared</groupId>
+			<artifactId>maven-invoker</artifactId>
+			<version>2.0.11</version>
+		</dependency>
 	</dependencies>
 
 </project>
